--- a/index.html
+++ b/index.html
@@ -1,1 +1,121 @@
-Hello this is website
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+
+</head>
+<body>
+    
+    <header>
+        <h1>Welcome to my portfolio</h1>
+        <div>
+<a href="#about">
+ <button class="button">
+        About
+    </button>
+</a>
+<a href="#skills">
+    <button class="button">
+           Skills
+       </button>
+   </a>
+   <a href="#projects">
+    <button class="button">
+           Projects
+       </button>
+   </a>
+   <a href="#contact">
+    <button class="button">
+           Contact
+       </button>
+   </a>
+        </div>
+    </header>
+    <main>
+        <section id="about">
+            <h1>Bhanusri</h1>
+            <img src="c:\prendss\IMG_20231125_170444.jpg" alt="a photo of me">
+             <p>I am a passionate web developer</p>
+             <p> Iam currently pursuing my btech in <em>Anil neerukonda institute of technology</em>
+             </p>
+             <p>I have learnt web development from<br>Code with swaroop</p>
+             <p>You can <strong>Click Here</strong>to checkout what i have learnt</p>
+        </section>
+        <section id="skills">
+            <h1>My skills</h1>
+            <ol>
+                <li>C basics</li>
+                <li>python basics</li>
+                <li>HTML basics</li>
+        
+            </ol>
+        </section>
+        <section id="projects">
+            <h1>My Projects</h1>
+            <table border="1">
+                <tr>
+                    <th>
+                        Project
+                    </th>
+                    <th>
+                        Description
+                    </th>
+                </tr>
+                <tr>
+                    <td>Portfolio website</td>
+                    <td>i have built a portfolio website using html,css and javascript</td>
+                </tr>
+            </table>
+        </section>
+        <section id="contact">
+            <h1>Contact Me</h1>
+            <p>Feel free to get in touch with me</p>
+            <form actions="">
+                <div>
+                <label for="name">Name:</label>
+                <input type="text">
+                </div>
+                <div>
+                <label for="email">Email:</label>
+                <input type="email">
+            </div>
+            <div>
+                <b>Choose your gender:</b>
+                <input type="radio" value="Male">
+                <label for="Male">Male</label>
+                <input type="radio" value="Female">
+                <label for="Female">Female</label>
+                </div>
+                <div>
+                <b>Select your Interests</b>
+                <input type="checkbox" value="coding">
+                <label for="Coding">coding</label>
+                <input type="Checkbox" value="reading">
+                <label for="reading">Reading</label>
+               </div>
+               <div>
+                <label for="bio">
+                    Bio(upto 200 characters):
+                </label>
+                <input type="text">
+                </div>
+                <button type="submit" class="submit">
+                    Submit
+                </button>
+            </form>
+        </section>
+
+    </main>
+    <a href="">
+    <button class="fixed">TOP</button>
+    </a>
+    <footer>
+        @2024 myportfolio
+    </footer>
+</body>
+</html>
+   
